2004-09-09  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* Makefile.am (BOOST_LIBS): fix when using already installed boost.
	(lyxclient_LDADD): add $(BOOST_LIBS) and $(INTLLIBS)

2004-09-06  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* Makefile.am (INCLUDES): add ${srcdir}/.. to INCLUDES (needed
	when building outside of source tree)

2004-09-04  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* messages.h: new file
	* messages.C: new file
	* lyxclient.man: new file
	* gettext.h: new file
	* gettext.C: new file
	* debug.h: new file
	* debug.C: new file
	* client.C: new file
	* boost.C: new file
	* Makefile.am: new file
	* .cvsignore: new file