@@ -4,3 +4,5 @@ lyxclient
 lyxclient.1
 .deps
 .libs
+pch.h.gch
+pch.h.gch.dep
