@@ -1,3 +1,10 @@
+2004-09-17  Lars Gullik Bjonnes  <larsbj@gullik.net>
+
+	* client.C (connect): don't use SUN_PATH, just use sizeof instead.
+	* client.C: include <cerrno>
+	* pch.h: new file
+	* .cvsignore: update
+
 2004-09-09  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
 
 	* Makefile.am (BOOST_LIBS): fix when using already installed boost.
